fix: minor ui-alignemnt issues

--- a/src/scss/components/_link.scss
+++ b/src/scss/components/_link.scss
@@ -33,13 +33,13 @@
       transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
       margin-right: 2px;
 
-      > span {
-        /* white-space: nowrap; */
+      >span {
+        white-space: nowrap;
       }
     }
 
     &__animated {
-      /* white-space: nowrap; */
+      white-space: nowrap;
       position: absolute;
       top: 100%;
       display: none;
@@ -71,10 +71,9 @@
     &__inner {
       display: flex;
       transform: translateY(-100%);
-      animation: infiniteArrow 1s infinite
-        cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      animation: infiniteArrow 1s infinite cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
-      > span {
+      >span {
         /* white-space: nowrap; */
       }
     }
